tests/error/modifier_errors/captured_var_inout_reassign.err
Error: Drop violation (at $FILE:13:4)
   | 
11 | @guppy
12 | def test() -> None:
13 |     a = qubit()
   |     ^ Variable `a` with non-droppable type `qubit` is leaked

Help: Make sure that `a` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
